--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,189 @@
-tensorflow>=1.15.2
-keras==2.3.1
+absl-py==0.12.0
+altair==4.1.0
+appdirs==1.4.4
+APScheduler==3.6.3
+argon2-cffi==20.1.0
+asgiref==3.4.1
+astor==0.8.1
+astunparse==1.6.3
+attrs==21.2.0
+backcall==0.2.0
+base58==2.1.1
+beautifulsoup4==4.9.3
+bleach==4.0.0
+blinker==1.4
+bs4==0.0.1
+cachetools==4.2.1
+certifi==2020.12.5
+cffi==1.14.6
+chardet==3.0.4
+charset-normalizer==2.0.10
+clarifai==2.6.2
+click==7.1.2
+colorama==0.4.4
+colorlover==0.3.0
+comtypes==1.1.10
+configparser==5.0.2
+cufflinks==0.17.3
+cycler==0.10.0
+decorator==5.0.6
+defusedxml==0.7.1
+distlib==0.3.1
+Django==3.2.5
+EasyProcess==0.3
+emoji==1.2.0
+entrypoints==0.3
+filelock==3.0.12
+fix-yahoo-finance==0.1.37
+Flask==1.1.2
+flatbuffers==1.12
+future==0.18.2
+gast==0.4.0
+gitdb==4.0.9
+GitPython==3.1.24
+google-auth==1.28.0
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+googleapis-common-protos==1.53.0
+grpcio==1.34.1
+gunicorn==20.1.0
+h5py==3.1.0
+html5lib==1.1
+idna==2.8
+imageio==2.13.5
 imutils==0.5.3
-numpy==1.18.2
-opencv-python==4.2.0.*
-matplotlib==3.2.1
-scipy==1.4.1
+instagram-scraper==1.10.4
+instapy==0.6.13
+ipykernel==5.5.3
+ipython==7.22.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+itsdangerous==1.1.0
+jedi==0.18.0
+Jinja2==2.11.2
+joblib==0.17.0
+jsonschema==2.6.0
+jupyter-client==6.2.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+Keras==2.4.3
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+lxml==4.6.3
+Markdown==3.3.4
+MarkupSafe==1.1.1
+matplotlib==3.3.3
+MeaningCloud-python==2.0.0
+mistune==0.8.4
+MouseInfo==0.1.3
+multitasking==0.0.10
+nbclient==0.5.4
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.6.3
+notebook==6.4.3
+numpy==1.22.0
+oauthlib==3.1.0
+opencv-python==4.4.0.46
+opt-einsum==3.3.0
+packaging==21.0
+pandas==1.1.5
+pandas-datareader==0.10.0
+pandocfilters==1.4.3
+parso==0.8.2
+pickleshare==0.7.5
+pig==0.1.2
+Pillow==8.0.1
+plotly==5.2.1
+plyer==2.0.0
+prettytable==0.7.2
+prometheus-client==0.11.0
+prompt-toolkit==3.0.18
+protobuf==3.15.7
+pyarrow==6.0.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAutoGUI==0.9.53
+pycparser==2.20
+pydeck==0.7.1
+pygame==2.1.0
+PyGetWindow==0.0.9
+Pygments==2.8.1
+pyjokes==0.6.0
+Pympler==0.9
+PyMsgBox==1.0.9
+pyparsing==2.4.7
+pyperclip==1.8.2
+pypiwin32==223
+PyRect==0.1.4
+PyScreeze==0.1.28
+pytesseract==0.3.8
+python-dateutil==2.8.1
+python-telegram-bot==13.4.1
+pyttsx3==2.90
+pytube==11.0.1
+pytube3==9.6.4
+pytweening==1.0.4
+pytz==2020.4
+PyWavelets==1.2.0
+pywhatkit==5.2
+pywin32==300
+pywinpty==1.1.3
+PyYAML==5.3.1
+pyzmq==22.0.3
+regex==2021.4.4
+requests==2.27.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+schedule==1.1.0
+scikit-image==0.19.1
+scikit-learn==0.23.2
+scipy==1.5.4
+seaborn==0.11.1
+selenium==3.141.0
+Send2Trash==1.8.0
+six==1.15.0
+sklearn==0.0
+smmap==5.0.0
+soupsieve==2.2.1
+speech==0.5.2
+speedtest-cli==2.1.3
+sqlparse==0.4.1
+streamlit==1.2.0
+tenacity==8.0.1
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.5.0rc0
+termcolor==1.1.0
+terminado==0.11.1
+tesseract==0.1.3
+testpath==0.5.0
+tf==1.0.0
+tf-estimator-nightly==2.5.0.dev2021032501
+threadpoolctl==2.1.0
+tifffile==2021.11.2
+toml==0.10.2
+toolz==0.11.2
+torch==1.10.0
+tornado==6.1
+tqdm==4.60.0
+traitlets==5.0.5
+typing-extensions==3.7.4.3
+tzlocal==2.1
+urllib3==1.25.11
+validators==0.18.2
+virtualenv==20.2.2
+virtualenvwrapper-win==1.2.6
+watchdog==2.1.6
+wcwidth==0.2.5
+webdriverdownloader==1.1.0.3
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+wikipedia==1.4.0
+wrapt==1.12.1
+yfinance==0.1.69
+youtube-dl==2020.1.1
